Rituals to craft orbs implemented

--- a/src/main/resources/assets/equinox/lang/en_us.json
+++ b/src/main/resources/assets/equinox/lang/en_us.json
@@ -9,6 +9,11 @@
   "tooltip.equinox.reject_eldritch_spells": "Seems like eldritch spells are rejecting your call",
   "tooltip.equinox.orb_rarity": "%s Orb",
 
+  "ui.equinox.not_valid_pedestal": "The targeted block is not a pedestal block",
+  "ui.equinox.not_valid_orb": "The pedestal needs to have an empty orb",
+  "ui.equinox.not_enough_pedestals": "You need 4 pedestals surrounding the central one to cast the ritual",
+  "ui.equinox.not_valid_orb_recipe": "Not a valid orb recipe",
+
   "item.equinox.blessed_orb": "Blessed Orb",
   "item.equinox.corrupted_orb": "Corrupted Orb",
   "item.equinox.obscure_orb": "Obscure Orb",
